Merge layers and submodules